# blue-bubbles-ingest

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/blue_bubbles_ingest/: __init__.py  app.py
tests/: test_app.py
tests/fixtures/: new-message.json
