[project]
name = "blue-bubbles-ingest"
version = "0.1.0"
description = "Minimal, privacy-safe BlueBubbles webhook receiver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0,<1",
    "uvicorn>=0.35.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blue_bubbles_ingest"]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1",
    "pytest>=8.4.1,<9",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
